--- a/foreach-movies-app/package.json
+++ b/foreach-movies-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tanstack/react-query": "^5.29.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
