fix wrong conf name

--- a/foreach-movies-app/Dockerfile
+++ b/foreach-movies-app/Dockerfile
@@ -10,7 +10,7 @@ RUN npm run build
 
 FROM nginx:1.21.0-alpine
 
-COPY foreach.conf /etc/nginx/conf.d/foreachmovies.conf
+COPY foreachmovies.conf /etc/nginx/conf.d/foreachmovies.conf
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 
