--- a/foreach-movies-app/foreachmovies.conf
+++ b/foreach-movies-app/foreachmovies.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name foreachmovies.electrikbox.fr;
-    root /usr/share/nginxhtml;
+    root /usr/share/nginx/html;
     index index.html index.htm;
 
     location / {
